--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,1 @@
-USER:
-ROLES, DAO, MODEL, SERVICE, REGISTER, LOGIN, REMIND,
-
-MESSAGING:
-
-BOARD:
--USER CAN CREATE THREAD (EVERY 1 HOUR)
--USER CAN POST  (EVERY 5 MIN)
--ADMIN CAN CREATE NEW CATEGORY
--ADMIN CAN DELETE THREAD, DELETE POST,
--USER CAN RATE THREAD
-
-
+PLANES CHANGE! SHOP APPLICATION IN JAVA!!!!
